# vpu-accelerator-samples

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .temp.log.swp  0001-alert-new-license-for-all-codes.patch  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  ResNet-50_fp32.xml  autogen.sh  barrier_1080x720.h264  build.sh  config.json  configure.ac  perfdata.txt  yolov2_tiny_od_yolo_IR_fp32.xml
app/: CMakeLists.txt  channelreceiver.cpp  channelreceiver.h  config.json  config.txt  config_generator.sh  config_hva.json  config_hva_template.json  config_rob.txt  dispatcher.cpp  dispatcher.h  gen_config.sh  hddldemo.cpp  hddldemo.h  hddldemo.ui  main.cpp
common/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  cropdefs.h  messagetype.h  socketclient.cpp  socketclient.h  socketserver.cpp  socketserver.h
front/hddl_manager/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  LocalMode.cpp  LocalMode.h  Pipeline.cpp  Pipeline.h  PipelineEvent.h  PipelineIPC.cpp  PipelineIPC.h  PipelineIpcClient.cpp  PipelineIpcClient.h  PipelineManager.cpp  PipelineManager.h  PipelineProcess.cpp  PipelineState.cpp  PipelineState.h  PipelineStatus.h  PipelineThread.cpp  SubProcess.cpp  SubProcess.h  XLinkConnector.cpp  XLinkConnector.h  hal_message.proto  main.cpp
front/hddl_mediapipe/: CMakeLists.txt  config_openvino_filesrc.json  config_openvino_new_plugins.json  config_openvino_send_metadata.json  config_openvino_send_metadata_new_plugins.json  hddl_mediapipe.h  launch_openvino_filesrc.txt  launch_openvino_new_plugins.txt  launch_openvino_send_metadata.txt  main.c
front/hddl_mediapipe3/: CMakeLists.txt  hddl_mediapipe.c  hddl_mediapipe.h  hddl_mediapipe_impl.h  main.c  message.cpp  message.h  us_client.c  us_client.h
front/ipc_mediapipe/: CMakeLists.txt  config.json  config_no_detect.json  config_openvino_new.json  config_testbuffer.json  config_testbufferv4l2.json  config_tracking.json  config_tracking_camera.json  config_tracking_file.json  decode_launch.txt  launch.txt  launch_no_audio.txt  launch_one_channel.txt  launch_onvif.txt  launch_openvino.txt  launch_openvino_new.txt  launch_testbufferv4l2.txt  launch_tracking_camera.txt  launch_tracking_file.txt  main.c  multi_mix_cvsdk_launch.txt
gst/: Makefile.am  gstapi2d.c  gstapi2d.cpp  gstapi2d.h  gstgapiosd.cpp  gstgapiosd.h
gst-libs/: Makefile.am  common.h  gapiobject.c  gapiobject.cpp  gapiobject.h  gapiobjectcircle.cpp  gapiobjectcircle.h  gapiobjectimage.cpp  gapiobjectimage.h  gapiobjectline.cpp  gapiobjectline.h  gapiobjectmosaic.cpp  gapiobjectmosaic.h  gapiobjectrectangle.cpp  gapiobjectrectangle.h  gapiobjecttext.cpp  gapiobjecttext.h  jsonHandle.cpp  jsonHandle.h
gstreamer_plugin/: CMakeLists.txt
gstreamer_plugin/gst/: CMakeLists.txt
gstreamer_plugin/gst-lib/: CMakeLists.txt
pipeline/: AppConnector.cpp  AppConnector.h  CMakeLists.txt  Pipeline.cpp  Pipeline.h  fpsstat.cpp  fpsstat.h  hddlchannel.cpp  hddlchannel.h  hddlpipeline.cpp  hddlpipeline.h  infermetasender.h  main.cpp  messagedispatcher.cpp  messagedispatcher.h  pipeline.cpp  pipeline.h
src/: CMakeLists.txt  GstHvaSample.cpp  GstPipeContainer.cpp  infer_node.cpp  jpeg_enc_node.cpp
src/DecWithJpeg/: CMakeLists.txt  GstHvaSample.cpp  GstPipeContainer.cpp  jpeg_enc_node.cpp
src/FullPipe/: CMakeLists.txt  FakeDelayNode.cpp  FrameControlNode.cpp  GstPipeContainer.cpp  ImageNetLabels.cpp  ImgFrameControlNode.cpp  ImgInferNode.cpp  ImgSenderNode.cpp  InferNode.cpp  InferNode.cpp.excluded  InferNode_unite.cpp  Messenger.cpp  PipelineConfig.cpp  Sender.cpp  hddl2plugin_helper.cpp  jpeg_enc_node.cpp  main.cpp  object_selector.cpp  object_tracking_node.cpp  region_yolov2tiny.cpp  tinyYolov2_post.cpp  unite_helper.cpp  unite_helper.cpp.excluded  validationDumpNode.cpp
src/FullPipeGUITest/: CMakeLists.txt  main.cpp
src/FullPipeGUITestMulti/: CMakeLists.txt  main.cpp
src/FullPipeGUITestSock/: CMakeLists.txt  main.cpp
src/ImgFullPipe/: CMakeLists.txt  ImgFrameControlNode.cpp  ImgInferNode.cpp  ImgSenderNode.cpp  PipelineConfig.cpp  main.cpp
src/ImgFullPipeGUITestMulti/: CMakeLists.txt  main.cpp
src/JpegTest/: CMakeLists.txt  JpegEncTest.cpp  jpeg_enc_node.cpp
src/KmbPipeline/: CMakeLists.txt  GstHvaSample.cpp  GstPipeContainer.cpp  infer_node.cpp
src/KmbPipelineDecOnly/: CMakeLists.txt  GstHvaSample.cpp  GstPipeContainer.cpp
src/config/: CMakeLists.txt  mp_config.c  mp_config.h  mp_config_json.c  mp_config_json.h
src/core/: CMakeLists.txt  mediapipe.c  mediapipe.h  mediapipe_com.h  mp_branch.c  mp_branch.h  mp_module.c  mp_module.h
src/drm_allocator/: CMakeLists.txt  drm_allocator_test.c  mp_gstdrmbomemory.c  mp_gstdrmbomemory.h
src/hddl2plugin_test/: CMakeLists.txt  hddl2plugin_test.cpp
src/inference_util/: hddl2plugin_helper.cpp
src/modules/: CMakeLists.txt  font.h  mp_changeformat.c  mp_channel.c  mp_crop.c  mp_crop_va.c  mp_cvsdk.c  mp_dump_buffer.c  mp_element.c  mp_encoder.c  mp_encrypt.c  mp_feeder.c  mp_gva_postproc_and_upload.c  mp_idr.c  mp_longterm.c  mp_mbqp.c  mp_metadata.c  mp_metaparser.c  mp_mix.c  mp_mix2.c  mp_mix3.c  mp_onvif.c  mp_openssl_hw.c  mp_openvino.c  mp_openvino_tracking.c  mp_roi.c  mp_rtsp.c  mp_sei.c  mp_slice.c  mp_snapshot.c  mp_teststream.c
src/nodes/: validationDumpNode.cpp
src/util/: ipc.cpp  jsonParser.cpp
src/utils/: CMakeLists.txt  local_debug.c  local_debug.h  macros.h  mp_cairo.c  mp_cairo.h  mp_utils.c  (+4 more)
unittest/: Makefile.am  osd_config_rect2.json  osd_config_text1.json  osd_config_text2.json  test.cpp
utils/: AccessController.cpp  AccessController.h  CMakeLists.txt  CompileUtils.h  Condition.h  ConfigParser.cpp  ConfigParser.h  DaemonUtils.h  Exception.h  FileMonitor.h  FileUtils.cpp  FileUtils.h  FpsCounter.h  GlobalMutex.h  HLog.h  IPC.cpp  IPC.h  JsonParser.h  Log.cpp  Log.h  Mutex.h  NonCopyable.h  Parameter.h  ScopeGuard.h  SecurityUtils.cpp.in  SecurityUtils.h  Semaphore.h  ShareMemory.h  Singleton.h  SpeedRadar.cpp  SpeedRadar.h  StringUtils.cpp  StringUtils.h  SubProcess.h  SystemInfo.h  ThreadPool.h  ThreadUtils.cpp  ThreadUtils.h  TimeUtils.cpp  TimeUtils.h  (+10 more)
(+261 files in other folders)
