# add_subdirectory(JpegTest)

# add_subdirectory(KmbPipeline)

# add_subdirectory(KmbPipelineDecOnly)

# add_subdirectory(DecWithJpeg)

add_subdirectory(FullPipe)

# add_subdirectory(FullPipeGUITest)

# add_subdirectory(FullPipeGUITestSock)
# add_subdirectory(hddl2plugin_test)

add_subdirectory(FullPipeGUITestMulti)
